# plcstub

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  libplctag.h  tags.inc
include/: debug.h  lock_utils.h  plcstub.h  tagtree.h  types.h
include/sys/: tree.h
src/: CMakeLists.txt  debug.c  plcstub.c  tagtree.c  types.c
test/: 00-hello.c  01-log_level.c  02-set_tag_cb.c  03-tag_create.c  04-metatag_lookup.c  05-tag-locking.c  06-types.c  CMakeLists.txt  Makefile  test_00-hello
test/test_00-hello.dSYM/Contents/: Info.plist
test/test_00-hello.dSYM/Contents/Resources/DWARF/: test_00-hello
